8372566: Genshen: crash at ShenandoahScanRemembered::process_clusters after JDK-8371667